--- a/style.css
+++ b/style.css
@@ -4,6 +4,23 @@
     box-sizing: border-box;
 }
 
+.h1 {
+    display: block;
+}
+
+.menu {
+    display: none;
+}
+
+.sidebar {
+    width: 250px;
+    /* Other styling for the sidebar */
+}
+
+.navbtn {
+    display: none; /* Hide the button in style.css */
+}
+
 /* Index */
 .header {
     position: fixed;
@@ -82,7 +99,6 @@
 .nav a:hover::before {
     width: 100%;
 }
-
 .header2 {
     top: 0;
     right: 50px; 
@@ -94,6 +110,7 @@
     justify-content: flex-end;
     align-items: center;
     z-index: 100;
+    pointer-events: none; /* Allows clicks to pass through */
 }
 
 .container {
@@ -107,6 +124,7 @@
     border-radius: 10px;
     -webkit-perspective: 300px;
     perspective: 300px;
+    
 }
 
 .coin {
@@ -114,6 +132,7 @@
     width: 75px;
     position: relative;
     margin: 10px auto;
+    
     -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d;
 }
@@ -134,7 +153,7 @@
     transform: rotateX(180deg);
 }
 
-@keyframes tailspin{
+@keyframes tailspin {
     0% {
         transform: rotateX(0);
     }
@@ -172,12 +191,17 @@ button {
 
 section#hero {
     height: calc(100vh - 60px);
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
+}
+
+section#hero2 {
+    display: none;
 }
 
 /*Links*/
@@ -195,6 +219,11 @@ section#hero {
     height: 70px; 
 }
 
+.Link2 {
+    display: none;
+}
+
+
 body{
     height: 100%;
     background: linear-gradient(
@@ -205,6 +234,12 @@ body{
 }
 
 /* Portfolio */
+
+.port {
+    display: none;
+}
+
+
 
 .wrapper1 {
     margin: 150px auto;
@@ -394,6 +429,10 @@ body{
 
 /* Service Section */
 
+.serv {
+    display: none;
+}
+
 .service1 {
     margin: 150px auto;
     width: 80%;
@@ -457,4 +496,3 @@ body{
 .SLinks a:hover {
     text-decoration: underline;
 }
-
