--- a/style2.css
+++ b/style2.css
@@ -10,7 +10,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    
     padding: 30px 50px;
     background: transparent;
     display: flex;
@@ -107,6 +106,7 @@ nav {
     transition: all 0.5s ease-in-out;
 } 
 
+
 nav a {
     position: relative;
     display: inline-block;
@@ -178,7 +178,9 @@ nav a {
         align-items: center;
         padding: 1px 0;
         z-index: 200;
+
     }
+
 
     nav a {
         padding: 15px 0;
@@ -193,7 +195,7 @@ nav a {
         transition: .5s;
     }
 
-    nav.nav.collapsed {
+    nav.nav.close {
         height: 0;
         overflow: hidden;   
 
@@ -232,6 +234,7 @@ nav a {
         height: 300px;
         width: 100%;
     }
+    
 }
 
 .navbtn {
@@ -247,44 +250,353 @@ nav a {
     cursor: pointer;
 }
 
-@media screen and (min-width: 1001px) {
-    h1 {
-      font-size: 5vw; 
-      color: rgb(219, 255, 112);
-      font-family: "Monaco",monospace;
-    }
-    p {
-      font-size: 3.85vw; 
-      line-height: 1.2; 
-      color: rgb(219, 255, 112);
-      font-family: "Monaco",monospace;
-    }
-  }
+/* hero section */
 
-  @media screen and (min-width: 601px) and (max-width: 1000px) {
-    h1 {
-      font-size: 4.5vw;
-      color: rgb(219, 255, 112);
-      font-family: "Monaco",monospace;
-    }
-    p {
-      font-size: 3.5vw;
-      line-height: 1.3;
-      color: rgb(219, 255, 112);
-      font-family: "Monaco",monospace;
-    }
-  }
+section#hero {
+    display: none;
+}
 
-  @media screen and (max-width: 600px) {
-    h1 {
-      font-size: 5vw;
-      color: rgb(219, 255, 112);
-      font-family: "Monaco",monospace;
-    }
-    p {
-      font-size: 3vw;
-      line-height: 1.4;
-      color: rgb(219, 255, 112);
-      font-family: "Monaco",monospace;
-    }
-  }
+section#hero2 {
+    text-align: left;   
+    align-items: left; 
+    
+}
+
+/* Links */
+.Links{
+    position: fixed; 
+    display: flex; 
+    gap: 10px; 
+    bottom: 20px; 
+    right: 20px; 
+    
+}
+
+.Link {
+    width: 70px; 
+    height: 70px; 
+}
+
+.Link2 {
+    width: 70px; 
+    height: 70px; 
+}
+
+body{
+    height: 20px;
+    display: flex;
+    
+    justify-content: left;
+    align-items: center;
+    margin-left: 50px;
+    min-height: 100vh;
+    background: url(newback.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+/* Portfolio */
+
+/* make style1 stuff invis */
+.wrapper1 {display: none;}
+.wrapper2 {display: none;}
+.wrapper3 {display: none;}
+.wrapper4 {display: none;}
+.wrapper5 {display: none;}
+
+.porttitle {
+    font-size: 1.5rem;
+    margin-bottom: 25px;
+}
+
+.port {
+    position: relative;
+}
+
+.port_container {
+    height: 80vh;
+    max-height: 70vh; /* Adjust this value based on how much of the screen you want it to occupy */
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 20px;
+    width: 95%;
+    position: relative;
+    border: 2px solid;
+    border-image: linear-gradient(45deg, #00c8ff, #b598ec) 1;
+    background-color: hsla(238, 50%, 20%, .4);
+    backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px);
+    padding: 5rem 2rem 5rem; 
+    
+}
+
+.port_container::-webkit-scrollbar {
+    width: 8px;
+}
+
+.port_container::-webkit-scrollbar-track {
+    background: rgb(44, 52, 90);
+    border-radius: 10px;
+}
+
+.port_container::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, #00c8ff, #b598ec);
+    border-radius: 0px;
+}
+
+.port_container::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(45deg, #00c8ff, #b598ec);
+}
+
+.porttitle {
+    font-size: 2rem;
+    color: rgb(161, 253, 238);
+    font-family: "Monaco",monospace;
+    font-weight: lighter;
+    padding: 0 6px;
+}
+
+/* Ensure the body remains static */
+body {
+    overflow: hidden;
+}
+
+.port_sect {
+    margin-bottom: 20px; 
+    position: relative;
+    border: 2px solid;
+    border-image: linear-gradient(45deg, #00c8ff, #b598ec) 1;
+    background: linear-gradient(hsla(243, 98%, 51%, .3), transparent 50%);
+    padding: 13rem 1rem 3rem;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2); 
+}
+
+.portimg {
+    width: 180px;
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.portimg2 {
+    width: 235px;
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.portimg3 {
+    width: 260px;
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+
+.portimg4 {
+    width: 180px;
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+
+.portimg5 {
+    width: 300px;
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+
+
+.projtitle {
+    font-size: 2rem;
+    color: rgb(161, 253, 238);
+    font-family: "Monaco",monospace;
+    font-weight: lighter;
+    padding: 0 6px;
+}
+.projdesc{
+    
+    color: rgb(161, 253, 238);
+    font-family: "Monaco",monospace;
+    font-weight: lighter;
+    padding: 0 6px;
+    font-size: 1rem;
+}
+
+
+/*Qualifications section*/
+
+.resume {
+    margin: 150px auto;
+    width: 90%;
+      
+}
+
+.resume img {
+    max-width: 900px;
+    float: right;
+    border: 3px solid #000000;
+    border-radius: 10px;
+    margin-right: 1px;
+}
+
+.resume-box {
+    color: #000000;
+}
+
+.resume-box h2 {
+    font-size: 92px;
+}
+
+.resume-box p {
+    font-size: 46px;
+}
+
+.QLinks a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    top: 80%;
+    font-size: 46px;
+}
+
+.QLinks a:hover {
+    text-decoration: underline;
+}
+
+/* Service Section */
+
+.service1 {
+    display: none;
+}
+
+.service2 {
+    display: none;
+}
+
+.servtitle {
+    font-size: 1.5rem;
+    margin-bottom: 25px;
+}
+
+.serv {
+    position: relative;
+}
+
+.serv_container {
+    height: 80vh;
+    max-height: 70vh; /* Adjust this value based on how much of the screen you want it to occupy */
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 20px;
+    width: 95%;
+    position: relative;
+    border: 2px solid;
+    border-image: linear-gradient(45deg, #00c8ff, #b598ec) 1;
+    background-color: hsla(238, 50%, 20%, .4);
+    backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px);
+    padding: 5rem 2rem 5rem; 
+    
+}
+
+.serv_container::-webkit-scrollbar {
+    width: 8px;
+}
+
+.serv_container::-webkit-scrollbar-track {
+    background: rgb(44, 52, 90);
+    border-radius: 10px;
+}
+
+.serv_container::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, #00c8ff, #b598ec);
+    border-radius: 0px;
+}
+
+.serv_container::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(45deg, #00c8ff, #b598ec);
+}
+
+.servtitle {
+    font-size: 2rem;
+    color: rgb(161, 253, 238);
+    font-family: "Monaco",monospace;
+    font-weight: lighter;
+    padding: 0 6px;
+}
+
+/* Ensure the body remains static */
+body {
+    overflow: hidden;
+}
+
+.serv_sect1 {
+    margin-bottom: 20px; 
+    position: relative;
+    border: 2px solid;
+    border-image: linear-gradient(45deg, #00c8ff, #b598ec) 1;
+    background: linear-gradient(hsla(243, 98%, 51%, .3), transparent 50%);
+    padding: 16rem 1rem 3rem;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2); 
+}
+
+.serv_sect2 {
+    margin-bottom: 20px; 
+    position: relative;
+    border: 2px solid;
+    border-image: linear-gradient(45deg, #00c8ff, #b598ec) 1;
+    background: linear-gradient(hsla(243, 98%, 51%, .3), transparent 50%);
+    padding: 13rem 1rem 3rem;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2); 
+}
+
+.servimg {
+    width: 12px;
+    
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.servimg2 {
+    width: 235px;
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.servtitle {
+    font-size: 2rem;
+    color: rgb(161, 253, 238);
+    font-family: "Monaco",monospace;
+    font-weight: lighter;
+    padding: 0 6px;
+}
+.servdesc{
+    
+    color: rgb(161, 253, 238);
+    font-family: "Monaco",monospace;
+    font-weight: lighter;
+    padding: 0 6px;
+    font-size: 1rem;
+}
