--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .sidebar {
     width: 250px;
-    /* Other styling for the sidebar */
+
 }
 
 .navbtn {
@@ -110,7 +110,7 @@
     justify-content: flex-end;
     align-items: center;
     z-index: 100;
-    pointer-events: none; /* Allows clicks to pass through */
+    pointer-events: none; 
 }
 
 .container {
@@ -386,6 +386,10 @@ body{
 
 
 /*Qualifications section*/
+
+.qual {
+    display: none;
+}
 
 .resume {
     margin: 100px auto;
